commit 5 for spidpay

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ui.HostActivity"
             android:label="@string/title_activity_host"
             android:theme="@style/Theme.Design.Light.NoActionBar"/>
-        <activity android:name=".ui.VerifyOTPActivity" />
+        <activity android:name=".ui.verifyotp.VerifyOTPActivity" />
         <activity android:name=".ui.DashboardActivity" />
         <activity android:name=".ui.WelcomeActivity" />
         <activity
