--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -58,5 +58,11 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
 
+    implementation 'androidx.multidex:multidex:2.0.1'
+
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
