--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.spidpay">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light.NoActionBar">
+        android:theme="@style/Theme.Design.Light.NoActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.addmoney.CashDesposit_Activity"/>
+        <activity android:name=".ui.addmoney.PaymentSuccessfulActivity"/>
+        <activity android:name=".ui.addmoney.online.OnlineActivity" />
+        <activity android:name=".ui.addmoney.AddMoneyActivity" />
+        <activity android:name=".ui.alltransaction.AllTransactionByWalletIdAcivity" />
         <activity
             android:name=".ui.HostActivity"
             android:label="@string/title_activity_host"
-            android:theme="@style/Theme.Design.Light.NoActionBar"/>
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity android:name=".ui.verifyotp.VerifyOTPActivity" />
         <activity android:name=".ui.DashboardActivity" />
         <activity android:name=".ui.WelcomeActivity" />
