--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.addmoney.cashdeposite.CashDesposit_Activity"/>
-        <activity android:name=".ui.addmoney.PaymentSuccessfulActivity"/>
+        <activity android:name=".ui.addmoney.requestparent.TranferMoneyActivity"></activity>
+        <activity android:name=".ui.addmoney.cashdeposite.CashDesposit_Activity" />
+        <activity android:name=".ui.addmoney.PaymentSuccessfulActivity" />
         <activity android:name=".ui.addmoney.online.OnlineActivity" />
         <activity android:name=".ui.addmoney.AddMoneyActivity" />
         <activity android:name=".ui.alltransaction.AllTransactionByWalletIdAcivity" />
