--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity android:name=".ui.addmoney.requestparent.TranferMoneyActivity" />
-        <activity android:name=".ui.addmoney.cashdeposite.CashDesposit_Activity" />
+        <activity android:name=".ui.addmoney.cashdeposite.CashDespositActivity" />
         <activity android:name=".ui.addmoney.PaymentSuccessfulActivity" />
         <activity android:name=".ui.addmoney.online.OnlineActivity" />
         <activity android:name=".ui.addmoney.AddMoneyActivity" />
