commit 08-07-2021  time for spidpay

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
-        android:usesCleartextTraffic="true"
-        android:fullBackupContent="@xml/backup_descriptor">
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.spwallet.WebviewActivity"></activity>
         <activity android:name=".ui.tradewallet.TransferMoneyActivity" />
         <activity android:name=".ui.spwallet.cashdeposite.CashDespositActivity" />
         <activity android:name=".ui.spwallet.PaymentSuccessfulActivity" />
