commit 13-07-2021  time for spidpay

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.spwallet.WebviewActivity"></activity>
+        <activity android:name=".ui.spwallet.PaymentFailedActivity"></activity>
+        <activity android:name=".ui.spwallet.WebviewActivity" />
         <activity android:name=".ui.tradewallet.TransferMoneyActivity" />
         <activity android:name=".ui.spwallet.cashdeposite.CashDespositActivity" />
         <activity android:name=".ui.spwallet.PaymentSuccessfulActivity" />
