--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
@@ -17,6 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.dmt.TransferSuccessfullActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.dmt.AddNewBeneiciaryActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.dmt.RegisterSenderActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.dmt.DMT_TrasferMoneyActivity"
+            android:exported="true" />
         <activity android:name=".ui.spwallet.PaymentFailedActivity" />
         <activity android:name=".ui.spwallet.WebviewActivity" />
         <activity android:name=".ui.tradewallet.TransferMoneyActivity" />
